# phi-shield

./: .dockerignore  .gitignore  Dockerfile  README.md  evaluate.py  extract.py  ocr.py  phi_shield.py  prepare.py  program.md  pyproject.toml  section_parser.py  server.py  templates.py  tokenizer.py
tests/: test_ocr.py  test_section_parser.py  test_server.py  test_tokenizer.py
